--- a/webpack/package.json
+++ b/webpack/package.json
@@ -4,13 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "dev": "webpack serve --mode=development",
+    "build": "webpack --config webpack.config.js --mode=production",
+    "analyze": "webpack --config webpack.config.js --mode=production --analyze",
     "profile": "webpack --config webpack.config.js --mode production --profile --json > stats.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-lodash": "^3.3.4",
+    "html-webpack-plugin": "^5.5.0",
+    "lodash-webpack-plugin": "^0.11.6",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-bundle-analyzer": "^4.6.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.5",
+    "lodash": "^4.17.21"
   }
 }
