--- a/webpack/package.json
+++ b/webpack/package.json
@@ -16,8 +16,12 @@
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.4",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash-webpack-plugin": "^0.11.6",
+    "mini-css-extract-plugin": "^2.6.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.0",
     "webpack-cli": "^4.10.0",
